--- a/.github/workflows/eset.yml
+++ b/.github/workflows/eset.yml
@@ -29,11 +29,11 @@ jobs:
           if [[ ${ACCOUNT} != 0 ]]
           then
           #Initialise chrome driver on 1st run
-          python3 main.py --account --cli --token=$ENV:TOKEN --channelID=$ENV:CHANNEL
+          python3 main.py --account --cli --token=$ENV:TOKEN --channelID=${{ secrets.channelID }}
           if [[ ${ACCOUNT} != 1 ]]
           then
           #Subsequent runs in parallel
-          seq 1 $((ACCOUNT - 1)) | xargs -I {} -P $((ACCOUNT - 1)) python3 main.py --account --cli --token=$ENV:TOKEN --channelID=$ENV:CHANNEL
+          seq 1 $((ACCOUNT - 1)) | xargs -I {} -P $((ACCOUNT - 1)) python3 main.py --account --cli --token=${{ secrets.TOKEN }} --channelID=${{ secrets.channelID }}
           fi
           echo "Account:" >> $GITHUB_STEP_SUMMARY
           cat ./*ACCOUNTS.txt >> $GITHUB_STEP_SUMMARY
@@ -41,11 +41,11 @@ jobs:
           if [[ ${KEY} != 0 ]]
           then
           #Initialise chrome driver on 1st run
-          python3 main.py --cli --token=$ENV:TOKEN --channelID=$ENV:CHANNEL
+          python3 main.py --cli --token=${{ secrets.TOKEN }} --channelID=${{ secrets.channelID }}
           if [[ ${KEY} != 1 ]]
           then
           #Subsequent runs in parallel
-          seq 1 $((KEY - 1)) | xargs -I {} -P $((KEY - 1)) python3 main.py --cli --token=$ENV:TOKEN --channelID=$ENV:CHANNEL
+          seq 1 $((KEY - 1)) | xargs -I {} -P $((KEY - 1)) python3 main.py --cli --token=${{ secrets.TOKEN }} --channelID=${{ secrets.channelID }}
           fi
           echo -e "\nKey:" >> $GITHUB_STEP_SUMMARY
           cat ./*KEYS.txt >> $GITHUB_STEP_SUMMARY
