--- a/.github/workflows/eset.yml
+++ b/.github/workflows/eset.yml
@@ -29,7 +29,7 @@ jobs:
           if [[ ${ACCOUNT} != 0 ]]
           then
           #Initialise chrome driver on 1st run
-          python3 main.py --account --cli --token=$ENV:TOKEN --channelID=${{ secrets.CHANNEL }}
+          python3 main.py --account --cli --token=${{ secrets.TOKEN }} --channelID=${{ secrets.CHANNEL }}
           if [[ ${ACCOUNT} != 1 ]]
           then
           #Subsequent runs in parallel
